--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "migration:create": "typeorm migration:create -f ormconfig.local",
+    "migration:run": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:run -f ormconfig.local"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +19,9 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "@nestjs/typeorm": "^8.0.3",
     "core-js": "^3.6.5",
+    "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
@@ -27,7 +31,8 @@
     "rxjs": "^7.0.0",
     "styled-components": "^5.3.3",
     "swagger-ui-express": "^4.3.0",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
